# nvidia-resource-suite

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  WORLD_INTERACTIVE_ORIGINS.md  api_server.py  config.py  docker-compose.yml  monad_node.py  pyproject.toml  requirements.txt  scheduler.py
docs/: MCP_SERVER.md  SETUP.md  architecture.md  contributing.md  getting-started.md  world-building-guide.md
earth2/: __init__.py  climate_sim.py  weather.py
education/: __init__.py  curriculum.py  world_quest.py
education/curricula/: __init__.py  ai_literacy.py  k12_stem.py  sovereign_economics.py
examples/: build_world.py  climate_demo.py  education_demo.py  hello_nim.py
isaac/: __init__.py  mission_dispatch.py  sim.py
mcp_server/: nvidia_mcp_server.py
modulus/: __init__.py  digital_twin.py  pde_solver.py
nemo/: __init__.py  asr.py  guardrails.py  llm.py  rag_pipeline.py  tts.py
nim/: __init__.py  audio.py  client.py  embedding.py  guardrails.py  llm.py  rag.py  vision.py
omniverse/: __init__.py  audio2face.py  farm.py  kit_bridge.py  nucleus.py  physx.py  replicator.py
omniverse/worlds/: __init__.py  base_world.py  east_flatbush.py  greenville.py  harlem_renaissance.py  silk_road.py
rapids/: __init__.py  accelerator.py
tensorrt/: __init__.py  optimizer.py  quantizer.py
triton/: __init__.py  client.py  model_repository.py
warp/: __init__.py  physics.py
